--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <li class="nav__item">
               <a class="btn" href="#">Home</a>
             </li>
+             <li class="nav__item">
+              <a class="btn" href="#">About</a>
+            </li>
             <li class="nav__item">
               <a class="btn" href="#">Events</a>
             </li>
